--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,11 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    
     <style>
-        .nav{
-            background-color: aquamarine !important;
-            color: black;
-        }
+      html{
+        margin-top: 0;
+        
+      }
     </style>
     {% block css %}
     {% endblock %}
@@ -27,17 +26,37 @@
     
   <header>
     <!-- place navbar here -->
-    <ul class="nav justify-content-center ">
-        <li class="nav-item">
-            <a class="nav-link " href="#" aria-current="page">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Details</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link " href="#">Login/Register</a>
-        </li>
-    </ul>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <div class="container">
+        <a class="navbar-brand" href="#">Dementia Prediction</a>
+        <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+          <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="#" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Fill Form</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+              <div class="dropdown-menu" aria-labelledby="dropdownId">
+                <a class="dropdown-item" href="#">Action 1</a>
+                <a class="dropdown-item" href="#">Action 2</a>
+              </div>
+            </li>
+          </ul>
+          <form class="d-flex my-2 my-lg-0">
+            <input class="form-control me-sm-2" type="text" placeholder="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    
   </header>
   <main>
     {% block body %}{% endblock %}
